init smoothie and fruit api
