# server/api/model/smoothie.js
@@ -1,0 +1,11 @@
+class Smoothie {
+  constructor(id, name, fruits, jus, description) {
+    this.id = id;
+    this.name = name;
+    this.fruits = fruits;
+    this.jus = jus;
+    this.description = description;
+  }
+}
+
+export default Smoothie;
